Almost ready for first alpha

--- a/DCS.Alternative.Launcher/Windows/MainWindow.xaml
+++ b/DCS.Alternative.Launcher/Windows/MainWindow.xaml
@@ -50,14 +50,14 @@
                                          TintColor="#33000000"
                                          TintOpacity="1">
                             <Grid>
-                                <Image Width="90"
-                                       Height="120"
-                                       Margin="0,-17,0,0"
+                                <Image Width="50"
+                                       Height="50"
+                                       Margin="30,0,0,0"
                                        HorizontalAlignment="Left"
-                                       VerticalAlignment="Top"
+                                       VerticalAlignment="Center"
                                        RenderOptions.BitmapScalingMode="HighQuality"
                                        RenderOptions.EdgeMode="Aliased"
-                                       Source="/Images/jabbers-logo.png"
+                                       Source="/Images/dal-icon-256.png"
                                        Stretch="Uniform">
                                     <Image.Effect>
                                         <DropShadowEffect BlurRadius="4" ShadowDepth="0" />
@@ -93,52 +93,6 @@
                                         </DataTemplate>
                                     </ItemsControl.ItemTemplate>
                                 </ItemsControl>
-                                <MenuItem Margin="0,15,-20,0"
-                                          HorizontalAlignment="Right"
-                                          VerticalAlignment="Center"
-                                          Background="Transparent"
-                                          Cursor="Hand"
-                                          Foreground="White"
-                                          ItemsSource="{Binding Installations}"
-                                          WindowChrome.IsHitTestVisibleInChrome="True">
-                                    <MenuItem.ItemContainerStyle>
-                                        <Style TargetType="MenuItem">
-                                            <Setter Property="Command" Value="{Binding DataContext.SelectInstallCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}" />
-                                            <Setter Property="WindowChrome.IsHitTestVisibleInChrome" Value="True" />
-                                        </Style>
-                                    </MenuItem.ItemContainerStyle>
-                                    <MenuItem.ItemTemplate>
-                                        <DataTemplate>
-                                            <TextBlock FontFamily="{StaticResource Prototype}"
-                                                       FontSize="11"
-                                                       FontWeight="Light"
-                                                       Text="{Binding Variant}">
-                                                <TextBlock.Effect>
-                                                    <DropShadowEffect BlurRadius="8" ShadowDepth="0" />
-                                                </TextBlock.Effect>
-                                            </TextBlock>
-                                        </DataTemplate>
-                                    </MenuItem.ItemTemplate>
-                                    <MenuItem.Header>
-                                        <StackPanel Orientation="Horizontal">
-                                            <TextBlock FontFamily="{StaticResource Prototype}"
-                                                       FontSize="11"
-                                                       FontWeight="Light"
-                                                       Text="{Binding SelectedInstall.Value.DisplayVariant}">
-                                                <TextBlock.Effect>
-                                                    <DropShadowEffect BlurRadius="8" ShadowDepth="0" />
-                                                </TextBlock.Effect>
-                                            </TextBlock>
-                                            <Path Margin="5,3,0,0"
-                                                  Data="M 0 0 L 6 6 L 12 0 Z"
-                                                  Fill="White">
-                                                <Path.Effect>
-                                                    <DropShadowEffect BlurRadius="8" ShadowDepth="0" />
-                                                </Path.Effect>
-                                            </Path>
-                                        </StackPanel>
-                                    </MenuItem.Header>
-                                </MenuItem>
 
                                 <Button Width="16"
                                         Height="16"
@@ -147,7 +101,10 @@
                                         HorizontalAlignment="Right"
                                         VerticalAlignment="Top"
                                         Background="Transparent"
-                                        BorderThickness="0">
+                                        BorderThickness="0"
+                                        Click="Button_Click"
+                                        Cursor="Hand"
+                                        WindowChrome.IsHitTestVisibleInChrome="True">
                                     <Path Data="M 7 4 C 6.744125 4 6.4879687 4.0974687 6.2929688 4.2929688 L 4.2929688 6.2929688 C 3.9019687 6.6839688 3.9019687 7.3170313 4.2929688 7.7070312 L 11.585938 15 L 4.2929688 22.292969 C 3.9019687 22.683969 3.9019687 23.317031 4.2929688 23.707031 L 6.2929688 25.707031 C 6.6839688 26.098031 7.3170313 26.098031 7.7070312 25.707031 L 15 18.414062 L 22.292969 25.707031 C 22.682969 26.098031 23.317031 26.098031 23.707031 25.707031 L 25.707031 23.707031 C 26.098031 23.316031 26.098031 22.682969 25.707031 22.292969 L 18.414062 15 L 25.707031 7.7070312 C 26.098031 7.3170312 26.098031 6.6829688 25.707031 6.2929688 L 23.707031 4.2929688 C 23.316031 3.9019687 22.682969 3.9019687 22.292969 4.2929688 L 15 11.585938 L 7.7070312 4.2929688 C 7.5115312 4.0974687 7.255875 4 7 4 z"
                                           Fill="#FF5F5F5F"
                                           Stretch="Uniform" />
