--- a/DCS.Alternative.Launcher/Plugins/Game/Views/GameView.xaml
+++ b/DCS.Alternative.Launcher/Plugins/Game/Views/GameView.xaml
@@ -10,6 +10,7 @@
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:wpf="clr-namespace:LoadingIndicators.WPF;assembly=LoadingIndicators.WPF"
+             xmlns:views="clr-namespace:DCS.Alternative.Launcher.Plugins.Game.Views"
              x:Name="RootLayout"
              HorizontalAlignment="Stretch"
              VerticalAlignment="Stretch"
@@ -73,6 +74,66 @@
                     </Border.Effect>
                 </Border>
             </Grid>
+            <Grid Margin="30,0,0,115"
+                  HorizontalAlignment="Left"
+                  VerticalAlignment="Bottom">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Button Padding="5,3"
+                        Background="#00000000"
+                        BorderThickness="0"
+                        Command="{Binding RepairDcsCommand}"
+                        Cursor="Hand"
+                        Foreground="#AFAFAF">
+                    <StackPanel Orientation="Horizontal">
+                        <Path Width="16"
+                              Data="M4.5.257l3.771 3.771c.409 1.889-2.33 4.66-4.242 4.242l-3.771-3.77c-.172.584-.258 1.188-.258 1.792 0 1.602.607 3.202 1.83 4.426 1.351 1.351 3.164 1.958 4.931 1.821.933-.072 1.852.269 2.514.931l9.662 9.662c.578.578 1.337.868 2.097.868 1.661 0 3.001-1.364 2.966-3.03-.016-.737-.306-1.47-.868-2.033l-9.662-9.663c-.662-.661-1.002-1.581-.931-2.514.137-1.767-.471-3.58-1.82-4.93-1.225-1.224-2.825-1.83-4.428-1.83-.603 0-1.207.086-1.791.257zm17.5 20.743c0 .553-.447 1-1 1-.553 0-1-.448-1-1s.447-1 1-1 1 .447 1 1z"
+                              Fill="#F0BC44"
+                              Stretch="Uniform">
+                            <Path.Effect>
+                                <DropShadowEffect BlurRadius="8" ShadowDepth="0" />
+                            </Path.Effect>
+                        </Path>
+                        <TextBlock Margin="10,0,0,0"
+                                   VerticalAlignment="Center"
+                                   FontFamily="{StaticResource Prototype}"
+                                   FontSize="12"
+                                   Foreground="{Binding Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}}}"
+                                   Text="Repair" />
+                    </StackPanel>
+                </Button>
+                <Button Grid.Row="0"
+                        Grid.Column="1"
+                        Padding="5,3"
+                        Background="#00000000"
+                        BorderThickness="0"
+                        Command="{Binding CheckForUpdatesCommand}"
+                        Cursor="Hand"
+                        Foreground="#AFAFAF">
+                    <StackPanel Orientation="Horizontal">
+                        <Path Width="16"
+                              Data="M5 18c4.667 4.667 12 1.833 12-4.042h-3l5-6 5 6h-3c-1.125 7.98-11.594 11.104-16 4.042zm14-11.984c-4.667-4.667-12-1.834-12 4.041h3l-5 6-5-6h3c1.125-7.979 11.594-11.104 16-4.041z"
+                              Fill="#F0BC44"
+                              Stretch="Uniform">
+                            <Path.Effect>
+                                <DropShadowEffect BlurRadius="8" ShadowDepth="0" />
+                            </Path.Effect>
+                        </Path>
+                        <TextBlock Margin="10,0,0,0"
+                                   VerticalAlignment="Center"
+                                   FontFamily="{StaticResource Prototype}"
+                                   FontSize="12"
+                                   Foreground="{Binding Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}}}"
+                                   Text="Check for Updates" />
+                    </StackPanel>
+                </Button>
+            </Grid>
             <StackPanel Margin="30"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Bottom"
@@ -92,7 +153,12 @@
                         </Setter>
                     </Style>
                 </StackPanel.Resources>
-                <Button Background="#6F1CC600" Command="{Binding LaunchDcsCommand}">
+                <Button Width="200"
+                        Height="75"
+                        Margin="0"
+                        Background="#6F1CC600"
+                        Command="{Binding LaunchDcsCommand}"
+                        Cursor="Hand">
                     <TextBlock FontFamily="{StaticResource Prototype}"
                                FontSize="18"
                                Text="PLAY">
@@ -101,19 +167,110 @@
                         </TextBlock.Effect>
                     </TextBlock>
                 </Button>
-                <Button MinWidth="0"
-                        Padding="15"
-                        VerticalAlignment="Bottom"
-                        Background="#6F1C00C6"
-                        Command="{Binding RepairDcsCommand}">
-                    <TextBlock FontFamily="{StaticResource Prototype}"
-                               FontSize="16"
-                               Text="REPAIR">
-                        <TextBlock.Effect>
-                            <DropShadowEffect BlurRadius="8" ShadowDepth="0" />
-                        </TextBlock.Effect>
-                    </TextBlock>
-                </Button>
+                <Grid Height="75"
+                      Margin="15,0,0,0"
+                      HorizontalAlignment="Left"
+                      VerticalAlignment="Center">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="5" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="5" />
+                    </Grid.RowDefinitions>
+                    <Menu Grid.Row="1"
+                          Height="Auto"
+                          MinWidth="100"
+                          Margin="0,0,0,3"
+                          HorizontalAlignment="Right"
+                          VerticalAlignment="Top"
+                          Background="Transparent">
+                        <MenuItem Padding="0"
+                                  HorizontalAlignment="Stretch"
+                                  VerticalAlignment="Stretch"
+                                  HorizontalContentAlignment="Stretch"
+                                  VerticalContentAlignment="Stretch"
+                                  Background="Transparent"
+                                  BorderThickness="0"
+                                  Cursor="Hand"
+                                  Foreground="#FFFFFFFF"
+                                  Header="INSTALL"
+                                  ItemsSource="{Binding Installations}"
+                                  WindowChrome.IsHitTestVisibleInChrome="True">
+                            <MenuItem.ItemContainerStyle>
+                                <Style TargetType="MenuItem">
+                                    <Setter Property="Command" Value="{Binding DataContext.SelectInstallCommand, RelativeSource={RelativeSource AncestorType={x:Type views:GameView}}}" />
+                                    <Setter Property="CommandParameter" Value="{Binding}" />
+                                    <Setter Property="HorizontalAlignment" Value="Stretch" />
+                                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                                    <Setter Property="VerticalAlignment" Value="Stretch" />
+                                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                                    <Setter Property="Background" Value="#FF11171D" />
+                                    <Setter Property="BorderBrush" Value="#FF11171D" />
+                                    <Setter Property="Padding" Value="0" />
+                                </Style>
+                            </MenuItem.ItemContainerStyle>
+                            <MenuItem.ItemTemplate>
+                                <DataTemplate>
+                                    <Border>
+                                        <TextBlock FontFamily="{StaticResource Prototype}"
+                                                   FontSize="11"
+                                                   FontWeight="Light"
+                                                   Text="{Binding Variant}">
+                                            <TextBlock.Effect>
+                                                <DropShadowEffect BlurRadius="8" ShadowDepth="0" />
+                                            </TextBlock.Effect>
+                                        </TextBlock>
+                                    </Border>
+                                </DataTemplate>
+                            </MenuItem.ItemTemplate>
+                            <MenuItem.HeaderTemplate>
+                                <DataTemplate>
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition />
+                                            <ColumnDefinition />
+                                        </Grid.ColumnDefinitions>
+                                        <TextBlock FontFamily="{StaticResource Prototype}"
+                                                   FontSize="11"
+                                                   FontWeight="Light"
+                                                   Text="{Binding}">
+                                            <TextBlock.Effect>
+                                                <DropShadowEffect BlurRadius="8" ShadowDepth="0" />
+                                            </TextBlock.Effect>
+                                        </TextBlock>
+                                        <Path Grid.Column="1"
+                                              Margin="5,2,0,0"
+                                              Data="M 0 0 L 6 6 L 12 0 Z"
+                                              Fill="#FFFFFFFF">
+                                            <Path.Effect>
+                                                <DropShadowEffect BlurRadius="8" ShadowDepth="0" />
+                                            </Path.Effect>
+                                        </Path>
+                                    </Grid>
+                                </DataTemplate>
+                            </MenuItem.HeaderTemplate>
+                        </MenuItem>
+                    </Menu>
+                    <TextBlock Grid.Row="2"
+                               FontFamily="{StaticResource Prototype}"
+                               Foreground="#FFAFAFAF"
+                               Text="{Binding SelectedInstall.Value.Variant}" />
+                    <TextBlock Grid.Row="4"
+                               Margin="0,0,0,3"
+                               FontFamily="{StaticResource Prototype}"
+                               FontSize="11"
+                               Foreground="#FFFFFFFF"
+                               Text="VERSION" />
+                    <TextBlock Grid.Row="5"
+                               FontFamily="{StaticResource Prototype}"
+                               FontSize="11"
+                               Foreground="#FFAFAFAF"
+                               Text="{Binding SelectedInstall.Value.Version}" />
+
+                </Grid>
             </StackPanel>
             <Grid Margin="30,10">
                 <TextBlock Margin="0,0,0,0"
