--- a/DCS.Alternative.Launcher/Plugins/Settings/Views/SettingsView.xaml
+++ b/DCS.Alternative.Launcher/Plugins/Settings/Views/SettingsView.xaml
@@ -179,9 +179,11 @@
                                                 <Border Grid.Column="7"
                                                         Background="#FFCF0000"
                                                         Visibility="{Binding IsValidInstall, Converter={x:Static data:VisibilityConverter.Instance}, ConverterParameter=reverse}">
-                                                    <TextBlock HorizontalAlignment="Left"
+                                                    <TextBlock HorizontalAlignment="Center"
                                                                FontSize="16"
-                                                               Text="Yes" />
+                                                               Foreground="#FFFFFFFF"
+                                                               Text="No"
+                                                               TextAlignment="Center" />
                                                 </Border>
                                             </Grid>
                                         </DataTemplate>
@@ -313,46 +315,103 @@
                                                                FontSize="12"
                                                                Foreground="#FFFFFFFF"
                                                                Text="{Binding Module.Value.BaseFolderPath}" />
-                                                    <ItemsControl Grid.Row="2"
-                                                                  Margin="0,2"
-                                                                  ItemsSource="{Binding Viewports}">
-                                                        <ItemsControl.ItemsPanel>
-                                                            <ItemsPanelTemplate>
-                                                                <StackPanel Orientation="Horizontal" />
-                                                            </ItemsPanelTemplate>
-                                                        </ItemsControl.ItemsPanel>
-                                                        <ItemsControl.ItemContainerStyle>
-                                                            <Style TargetType="ContentPresenter">
-                                                                <Setter Property="Margin" Value="0,0,20,0" />
-                                                            </Style>
-                                                        </ItemsControl.ItemContainerStyle>
-                                                        <ItemsControl.ItemTemplate>
-                                                            <DataTemplate>
-                                                                <Button Height="20"
-                                                                        Padding="2"
-                                                                        HorizontalAlignment="Center"
-                                                                        VerticalAlignment="Center"
-                                                                        Background="#FF006F00"
-                                                                        Command="{Binding DataContext.EditViewportCommand, RelativeSource={RelativeSource AncestorType={x:Type ListView}}}"
-                                                                        CommandParameter="{Binding}"
-                                                                        Cursor="Hand">
-                                                                    <TextBlock FontFamily="{StaticResource Prototype}"
-                                                                               FontSize="10"
-                                                                               Foreground="White"
-                                                                               Text="{Binding Name}">
-                                                                        <TextBlock.Effect>
-                                                                            <DropShadowEffect BlurRadius="8" ShadowDepth="0" />
-                                                                        </TextBlock.Effect>
-                                                                    </TextBlock>
-                                                                </Button>
-                                                            </DataTemplate>
-                                                        </ItemsControl.ItemTemplate>
-                                                    </ItemsControl>
+                                                    <StackPanel Grid.Row="2"
+                                                                Margin="0,2"
+                                                                Orientation="Horizontal">
+
+                                                        <Button Width="20"
+                                                                Height="20"
+                                                                Margin="0,5,10,5"
+                                                                Padding="0"
+                                                                HorizontalAlignment="Left"
+                                                                VerticalAlignment="Top"
+                                                                Background="#FF006F00"
+                                                                Command="{Binding DataContext.AddViewportCommand, RelativeSource={RelativeSource AncestorType={x:Type ListView}}}"
+                                                                CommandParameter="{Binding}"
+                                                                Cursor="Hand">
+                                                            <TextBlock FontFamily="{StaticResource Prototype}"
+                                                                       FontSize="16"
+                                                                       Foreground="#FFFFFFFF"
+                                                                       Text="+">
+                                                                <TextBlock.Effect>
+                                                                    <DropShadowEffect BlurRadius="8" ShadowDepth="0" />
+                                                                </TextBlock.Effect>
+                                                            </TextBlock>
+                                                        </Button>
+                                                        <ItemsControl HorizontalAlignment="Stretch"
+                                                                      HorizontalContentAlignment="Stretch"
+                                                                      ItemsSource="{Binding Viewports}"
+                                                                      ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+                                                            <ItemsControl.ItemsPanel>
+                                                                <ItemsPanelTemplate>
+                                                                    <WrapPanel Width="650" Orientation="Horizontal" />
+                                                                </ItemsPanelTemplate>
+                                                            </ItemsControl.ItemsPanel>
+                                                            <ItemsControl.ItemContainerStyle>
+                                                                <Style TargetType="ContentPresenter">
+                                                                    <Setter Property="HorizontalAlignment" Value="Stretch" />
+                                                                    <Setter Property="Margin" Value="0,5,10,5" />
+                                                                </Style>
+                                                            </ItemsControl.ItemContainerStyle>
+                                                            <ItemsControl.ItemTemplate>
+                                                                <DataTemplate>
+                                                                    <StackPanel Orientation="Horizontal">
+                                                                        <Button Height="20"
+                                                                                Padding="4,2"
+                                                                                HorizontalAlignment="Center"
+                                                                                VerticalAlignment="Center"
+                                                                                Background="#FF1C1C1C"
+                                                                                Command="{Binding DataContext.EditViewportCommand, RelativeSource={RelativeSource AncestorType={x:Type ListView}}}"
+                                                                                CommandParameter="{Binding}"
+                                                                                Cursor="Hand">
+                                                                            <TextBlock FontFamily="{StaticResource Prototype}"
+                                                                                       FontSize="12"
+                                                                                       Foreground="White"
+                                                                                       Text="{Binding Name}">
+                                                                                <TextBlock.Effect>
+                                                                                    <DropShadowEffect BlurRadius="8" ShadowDepth="0" />
+                                                                                </TextBlock.Effect>
+                                                                            </TextBlock>
+                                                                        </Button>
+                                                                        <Button Height="20"
+                                                                                Padding="2"
+                                                                                HorizontalAlignment="Center"
+                                                                                VerticalAlignment="Center"
+                                                                                Background="#FFAF0000"
+                                                                                BorderThickness="0,1,1,1"
+                                                                                Command="{Binding DataContext.RemoveViewportCommand, RelativeSource={RelativeSource AncestorType={x:Type ListView}}}"
+                                                                                CommandParameter="{Binding}"
+                                                                                Cursor="Hand">
+                                                                            <Path Margin="2"
+                                                                                  Data="M 7 4 C 6.744125 4 6.4879687 4.0974687 6.2929688 4.2929688 L 4.2929688 6.2929688 C 3.9019687 6.6839688 3.9019687 7.3170313 4.2929688 7.7070312 L 11.585938 15 L 4.2929688 22.292969 C 3.9019687 22.683969 3.9019687 23.317031 4.2929688 23.707031 L 6.2929688 25.707031 C 6.6839688 26.098031 7.3170313 26.098031 7.7070312 25.707031 L 15 18.414062 L 22.292969 25.707031 C 22.682969 26.098031 23.317031 26.098031 23.707031 25.707031 L 25.707031 23.707031 C 26.098031 23.316031 26.098031 22.682969 25.707031 22.292969 L 18.414062 15 L 25.707031 7.7070312 C 26.098031 7.3170312 26.098031 6.6829688 25.707031 6.2929688 L 23.707031 4.2929688 C 23.316031 3.9019687 22.682969 3.9019687 22.292969 4.2929688 L 15 11.585938 L 7.7070312 4.2929688 C 7.5115312 4.0974687 7.255875 4 7 4 z"
+                                                                                  Fill="#FFFFFFFF"
+                                                                                  Stretch="Uniform" />
+                                                                        </Button>
+                                                                    </StackPanel>
+                                                                </DataTemplate>
+                                                            </ItemsControl.ItemTemplate>
+                                                        </ItemsControl>
+                                                    </StackPanel>
                                                 </Grid>
                                             </Grid>
                                         </DataTemplate>
                                     </ListView.ItemTemplate>
                                 </ListView>
+                                <Button Grid.Row="2"
+                                        Height="30"
+                                        Padding="3"
+                                        HorizontalAlignment="Left"
+                                        VerticalAlignment="Bottom"
+                                        Background="#FF006F00"
+                                        Command="{Binding GenerateMonitorConfigCommand}">
+                                    <TextBlock FontFamily="{StaticResource Prototype}"
+                                               FontSize="16"
+                                               Text="GENERATE MONITOR CONFIG">
+                                        <TextBlock.Effect>
+                                            <DropShadowEffect BlurRadius="8" ShadowDepth="0" />
+                                        </TextBlock.Effect>
+                                    </TextBlock>
+                                </Button>
                                 <StackPanel Grid.Row="2"
                                             HorizontalAlignment="Right"
                                             Orientation="Horizontal">
@@ -362,7 +421,7 @@
                                             HorizontalAlignment="Left"
                                             VerticalAlignment="Bottom"
                                             Background="#6F1C00C6"
-                                            Command="{Binding AddViewportCommand}">
+                                            Command="{Binding AddModuleViewportCommand}">
                                         <TextBlock FontFamily="{StaticResource Prototype}"
                                                    FontSize="16"
                                                    Text="+">
@@ -377,7 +436,7 @@
                                             HorizontalAlignment="Left"
                                             VerticalAlignment="Bottom"
                                             Background="#6F1C00C6"
-                                            Command="{Binding RemoveViewportCommand}">
+                                            Command="{Binding RemoveModuleViewportCommand}">
                                         <TextBlock FontFamily="{StaticResource Prototype}"
                                                    FontSize="15"
                                                    Text="-">
