--- a/DCS.Alternative.Launcher/Controls/MessageBoxEx/MessageBoxEx.xaml
+++ b/DCS.Alternative.Launcher/Controls/MessageBoxEx/MessageBoxEx.xaml
@@ -2,17 +2,170 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:local="clr-namespace:DCS.Alternative.Launcher.Controls.MessageBoxEx"
+        xmlns:data="clr-namespace:DCS.Alternative.Launcher.Data"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        Width="800"
-        Height="450"
+        Width="600"
+        Height="200"
+        MaxWidth="600"
         WindowStartupLocation="CenterOwner"
         mc:Ignorable="d">
     <WindowChrome.WindowChrome>
-        <WindowChrome GlassFrameThickness="0"
-                      NonClientFrameEdges="None"
+        <WindowChrome CornerRadius="0"
+                      GlassFrameThickness="0"
                       ResizeBorderThickness="0"
                       UseAeroCaptionButtons="False" />
     </WindowChrome.WindowChrome>
-    <Grid />
+    <Window.Resources>
+        <Style TargetType="TextBlock">
+            <Setter Property="Foreground" Value="White" />
+            <Setter Property="FontFamily" Value="{StaticResource Prototype}" />
+        </Style>
+
+        <Style x:Key="CaptionButtonStyle" TargetType="{x:Type Button}">
+            <Setter Property="Width" Value="30" />
+            <Setter Property="Height" Value="30" />
+            <Setter Property="IsTabStop" Value="False" />
+            <Setter Property="Foreground" Value="#FFCFCFCF" />
+            <Setter Property="WindowChrome.IsHitTestVisibleInChrome" Value="True" />
+            <Setter Property="Background" Value="Transparent" />
+            <Setter Property="BorderBrush" Value="Transparent" />
+            <Setter Property="Margin" Value="0" />
+            <Setter Property="Padding" Value="0" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Grid>
+                            <Border x:Name="border"
+                                    Background="{TemplateBinding Background}"
+                                    BorderBrush="{TemplateBinding BorderBrush}"
+                                    BorderThickness="{TemplateBinding BorderThickness}"
+                                    CornerRadius="2">
+                                <ContentPresenter />
+                            </Border>
+                        </Grid>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="true">
+                                <Setter Property="BorderBrush" Value="{DynamicResource MaterialDesignWindowCloseButtonMouseOverBorderBrush}" />
+                                <Setter Property="Background" Value="{DynamicResource MaterialDesignWindowCloseButtonMouseOverBackgroundBrush}" />
+                                <Setter Property="Foreground" Value="{DynamicResource MaterialDesignWindowCloseButtonMouseOverForegroundBrush}" />
+                            </Trigger>
+                            <Trigger Property="IsEnabled" Value="false">
+                                <Setter Property="Opacity" Value="0.23" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
+    <Grid>
+        <Grid.Background>
+            <RadialGradientBrush GradientOrigin="0,0" RadiusX="1" RadiusY="1">
+                <GradientStop Offset="0" Color="#FF353C53" />
+                <GradientStop Offset="0.7" Color="#FF030606" />
+            </RadialGradientBrush>
+        </Grid.Background>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <TextBlock x:Name="txtCaption"
+                       Grid.Row="0"
+                       Grid.Column="0"
+                       Margin="5"
+                       FontSize="16"
+                       Text="[Caption]" />
+            <StackPanel Grid.Row="0"
+                        HorizontalAlignment="Right"
+                        Orientation="Horizontal">
+                <!--<Button Style="{StaticResource CaptionButtonStyle}">
+                    <Path Width="10"
+                          Height="10"
+                          Data="M0,0L32,0 32,5.3 0,5.3z"
+                          Fill="{Binding Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}}}"
+                          Stretch="Uniform" />
+                </Button>
+                <Button Style="{StaticResource CaptionButtonStyle}">
+                    <Path Width="10"
+                          Height="10"
+                          Data="M1.9999998,8.009992L1.9999998,29.99999 24,29.99999 24,8.009992z M6.9999855,2L6.9999855,6.0099912 26,6.0099912 26,25.004003 29.999985,25.004003 29.999985,2z M4.9999855,0L31.999985,0 31.999985,27.004003 26,27.004003 26,31.99999 0,31.99999 0,6.0099912 4.9999855,6.0099912z"
+                          Fill="{Binding Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}}}"
+                          Stretch="Uniform" />
+                </Button>
+                <Button Style="{StaticResource CaptionButtonStyle}">
+                    <Path Width="10"
+                          Height="10"
+                          Data="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.4"
+                          Fill="{Binding Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}}}"
+                          Stretch="Uniform" />
+                </Button>-->
+            </StackPanel>
+            <Grid Grid.Row="1" Margin="20">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Image x:Name="imgIcon"
+                       MaxWidth="60"
+                       MaxHeight="60"
+                       Margin="0,0,10,0"
+                       Stretch="Uniform"
+                       Visibility="{Binding Source, RelativeSource={RelativeSource Self}, Converter={x:Static data:VisibilityConverter.Instance}}">
+                    <Image.Effect>
+                        <DropShadowEffect BlurRadius="8" ShadowDepth="0" />
+                    </Image.Effect>
+                </Image>
+                <TextBlock x:Name="txtMessage"
+                           Grid.Column="1"
+                           FontSize="14"
+                           Text="[This is where the message box will display it's message]"
+                           TextWrapping="Wrap" />
+            </Grid>
+            <StackPanel Grid.Row="2"
+                        Margin="20"
+                        HorizontalAlignment="Right"
+                        Orientation="Horizontal">
+                <StackPanel.Resources>
+                    <Style TargetType="Button">
+                        <Setter Property="MinWidth" Value="75" />
+                        <Setter Property="Margin" Value="10,0,0,0" />
+                        <Setter Property="Padding" Value="3" />
+                        <Setter Property="HorizontalAlignment" Value="left" />
+                        <Setter Property="VerticalAlignment" Value="Bottom" />
+                        <Setter Property="Background" Value="#FF11AF11" />
+                        <Setter Property="Foreground" Value="#FFFFFFFF" />
+                        <Setter Property="FontFamily" Value="{StaticResource Prototype}" />
+                        <Setter Property="FontSize" Value="16" />
+                    </Style>
+                </StackPanel.Resources>
+                <!--<Button x:Name="btnAbort"
+                        Background="#6F1C00C6"
+                        Click="BtnAbort_Click"
+                        Content="IGNORE" />
+                <Button x:Name="btnRetry"
+                        Click="BtnRetry_Click"
+                        Content="IGNORE" />
+                <Button x:Name="btnIgnore"
+                        Background="#6F1C00C6"
+                        Click="BtnIgnore_Click"
+                        Content="IGNORE" />-->
+                <Button x:Name="btnYes"
+                        Click="BtnYes_Click"
+                        Content="YES" />
+                <Button x:Name="btnNo"
+                        Background="#6F1C00C6"
+                        Click="BtnNo_Click"
+                        Content="NO" />
+                <Button x:Name="btnOK"
+                        Click="BtnOK_Click"
+                        Content="OK" />
+                <Button x:Name="btnCancel"
+                        Background="#6F1C00C6"
+                        Click="BtnCancel_Click"
+                        Content="CANCEL" />
+            </StackPanel>
+        </Grid>
+    </Grid>
 </Window>
